--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -41,3 +41,25 @@ spec:
           initialDelaySeconds: 15
           timeoutSeconds: 1
           periodSeconds: 10
+        resources:
+          requests:
+            cpu: 200m
+--- 
+apiVersion: autoscaling/v2beta1
+kind: HorizontalPodAutoscaler
+metadata: 
+  name: train-schedule
+  namespace: default
+spec: 
+  maxReplicas: 4
+  metrics: 
+    - 
+      resource: 
+        name: cpu
+        targetAverageUtilization: 50
+      type: Resource
+  minReplicas: 1
+  scaleTargetRef: 
+    apiVersion: apps/v1
+    kind: Deployment
+    name: train-schedule-deployment
